--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -16,7 +16,7 @@
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnumberonlyfirstinline
-\Xsymlinenum{\hspace*{-0.5em}$||$}
+\Xsymlinenum{$||$}
 \geometry{paperwidth=17cm,paperheight=25cm,top=1.45cm,inner=1.75cm,outer=1.45cm,bottom=2.54cm}
 \newcommand{\comillas}[1]{«#1»}
 \clearpairofpagestyles
@@ -30,7 +30,7 @@
 \setmainlanguage{spanish}
 \setotherlanguage{ancientgreek}
 \usetikzlibrary{positioning}
-\setmainfont[Numbers=Lining,BoldFont={}]{Times New Roman}
+\setmainfont[Numbers=Lining,BoldFont={}]{brill}
 %Aquí cierran los comandos más específicos.
 \begin{document}
 	{\pagenumbering{gobble}
