--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -16,7 +16,7 @@
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnumberonlyfirstinline
-\Xsymlinenum{$||$}
+\Xsymlinenum{$//$}
 \geometry{paperwidth=17cm,paperheight=25cm,top=1.45cm,inner=1.75cm,outer=1.45cm,bottom=2.54cm}
 \newcommand{\comillas}[1]{«#1»}
 \clearpairofpagestyles
@@ -59,7 +59,7 @@ Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su f
 
 Las \textit{Coplas por la muerte de su padre} son una «colección» de coplas escritas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} —tres octosílabos y un tetrasílabo—, lenguaje llano y culto, rimas consonantes y posee erudición histórica, filosófica y teológica.
 
-El título de la obra, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitraria si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título de la obra no es estrictamente reconstruible, aunque, por mayoría, se prefiere \comillas{coplas}, como puede observarse desde la edición de \textcite{Foulché-Delbosc1902} hasta \textcite{Beltrán2013}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal, o al menos no como se transmitió; quizá el título más natural, siguiendo la \comillas{finalidad} por la que fueron escritas, es \comillas{De don Jorge Manrique a su padre}\footnote{El testimonio que porta la rúbrica que más se acerca es \textit{86*RL}.}.
+El título de la obra, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitraria si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título de la obra no es estrictamente reconstruible, aunque, por mayoría, se prefiere \comillas{coplas}, como puede observarse desde la edición de \textcite{Foulché-Delbosc1902} hasta \textcite{Beltrán2013}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal, o al menos no como se transmitió.
 
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que no existió un \comillas{obras de don Jorge Manrique} o una edición de sus textos, sino que solo se conservaron dispersos en cancioneros, esto es, antologías.
 
@@ -164,17 +164,13 @@ Criterios de presentación gráfica\footnote{No aplican al aparato de variantes,
 
 ~\textit{th}= se conserva para indicar latinismos cultos en el texto.
 
-~\textit{⁊}= \textit{et tironiano} se interpreta por \textit{e}.
+~\textit{⁊}= se interpreta por \textit{e}.
 
 Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también, en menor medida, cuando se adopten lecciones de \textit{HH1} o algún testimonio impreso.
 
 El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
 
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes textuales y los comentarios adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnote{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V:\vspace{-6pt}
-\begin{flushright}
-56 quando] mientra \textit{δ}; quanto \textit{HH1}.
-\end{flushright}\vspace{-1pt}
-{\setlength{\parindent}{0pt}Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones al texto.}
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes textuales y los comentarios adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{//}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnote{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones al texto.
 
 \section*{{\fontsize{14}{14.35}\selectfont BIBLIOGRAFÍA}}
 \addcontentsline{toc}{section}{BIBLIOGRAFÍA}
