--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -178,7 +178,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \printbibliography[heading=none]
 \newpage
 
-\section*{\raggedleft TEXTO Y APARATO CRÍTICOS}
+\section*{\raggedleft \fontsize{14}{14.35}\selectfont TEXTO Y APARATO CRÍTICOS}
 \addcontentsline{toc}{section}{TEXTO Y APARATO CRÍTICOS}
 \newpage
 
@@ -1110,7 +1110,7 @@ su memoria.
 \endnumbering
 \newpage
 
-\section*{APÉNDICE}
+\section*{\fontsize{14}{14.35}\selectfont APÉNDICE}
 \addcontentsline{toc}{section}{APÉNDICE}
 
 Coplas apócrifas en la \comillas{\textit{Glosa Famossisima}} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
