--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -10,14 +10,15 @@
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
 \usepackage{graphicx}
-\title{COPLAS POR LA MVERTE DE SV PADRE}
-\author{JORGE MANRIQVE}
-\date{\fontsize{9}{11}\selectfont{EDICIÓN CRÍTICA}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\title{CARMINA OB MORTEM PATRIS}
+\author{GIORGII MANRICI}
+\date{\fontsize{9}{11}\selectfont{CVM APPARATV CRITICO INSTRVXIT}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnumberonlyfirstinline
-\Xsymlinenum{$//$}
-\geometry{paperwidth=17cm,paperheight=25cm,top=1.45cm,inner=1.75cm,outer=1.45cm,bottom=2.54cm}
+\Xnumberonlyfrstintwolines
+\Xsymlinenum{$//$}}
+\geometry{paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.75cm,outer=1.4cm,bottom=2.54cm}
 \newcommand{\comillas}[1]{«#1»}
 \clearpairofpagestyles
 \ofoot[\pagemark]{\pagemark}
@@ -30,7 +31,7 @@
 \setmainlanguage{spanish}
 \setotherlanguage{ancientgreek}
 \usetikzlibrary{positioning}
-\setmainfont[Numbers=Lining,BoldFont={}]{brill}
+\setmainfont[Numbers=Lining,BoldFont={}]{old standard}
 %Aquí cierran los comandos más específicos.
 \begin{document}
 	{\pagenumbering{gobble}
@@ -41,7 +42,7 @@
 \null
 \vfill
 \begin{flushright}
-	\textit{Documento procesado con} LuaLaTeX \textit{y} Reledmac\textit{, diseñado este por Maïeul Rouquette}.
+	\textit{Documento procesado en} LuaLaTeX \textit{con el paquete} Reledmac \textit{de Maïeul Rouquette}.
 \end{flushright}
 \newpage
 
@@ -50,7 +51,7 @@
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{{\fontsize{14}{14.35}\selectfont PREFACIO}}
+\section*{{\fontsize{13}{14.35}\selectfont PREFACIO}}
 \addcontentsline{toc}{section}{PREFACIO}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
@@ -63,37 +64,37 @@ El título de la obra, \textit{Coplas por la muerte de su padre}, resulta un tan
 
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que no existió un \comillas{obras de don Jorge Manrique} o una edición de sus textos, sino que solo se conservaron dispersos en cancioneros, esto es, antologías.
 
-\section*{\fontsize{14}{14.35}\selectfont TESTIMONIOS\footnote{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.], texto que para la presente edición no pudo consultarse.}}
+\section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.], texto que para la presente edición no pudo consultarse.}}
 \addcontentsline{toc}{section}{TESTIMONIOS}
 
-\textit{LB3}= \textit{Cancionero de Egerton}, British Library, Eg. 939.
+\textit{LB3}. \textit{Cancionero de Egerton}; British Library, Eg. 939.
 
 Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 cuardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r.-18v. contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v., porque el fol. central [primitivo f. 19v.] no se conservó, que debía contener las líneas faltantes de la copla, y tras el fol. no conservado, debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}.\vspace{5pt}
 
-\textit{82*JM}= \textit{Vita Christi por fray Íñigo de Mendoza}, Real Biblioteca del Monasterio de San Lorenzo de El Escorial, 100-II-17.
+\textit{82*JM}. \textit{Vita Christi por fray Íñigo de Mendoza}; RBME, 100-II-17.
 
 Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r.-44v. contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares conocidos, que se hallan uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm.3]; \textit{editio princeps}.\vspace{5pt}
 
-\textit{86*RL}= \textit{Cancionero de Ramón de Llavia}, Biblioteca Nacional de España, INC/2567.
+\textit{86*RL}. \textit{Cancionero de Ramón de Llavia}; BNE, INC/2567.
 
 Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73r.-76r. contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}.\vspace{5pt}
 
-\textit{HH1}= \textit{Cancionero de Oñate-Castañeda}, Harvard Houghton Library, MS. Span. 97.
+\textit{HH1}. \textit{Cancionero de Oñate-Castañeda}; Harvard, Houghton Library, MS. Span. 97.
 
 Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421v.-424v. contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\vspace{5pt} 
 
-\textit{MN19}= \textit{Cancionero de Pero Guillén de Segovia}, Biblioteca Nacional de España, MS/4114.
+\textit{MN19}. \textit{Cancionero de Pero Guillén de Segovia}; BNE, MS/4114.
 
 Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r.-418v. contienen las coplas X-XL [acéfalo].\vspace{5pt}
 
-\textit{83*IM}= \textit{Cancionero de fray Íñigo de Mendoza}, Biblioteca Nacional de España, INC/897.
+\textit{83*IM}. \textit{Cancionero de fray Íñigo de Mendoza}; BNE, INC/897.
 
 Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67r.-70r. contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22].
 
-\section*{{\fontsize{14}{14.35}\selectfont CRITERIOS DE EDICIÓN}}
+\section*{{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}}
 \addcontentsline{toc}{section}{CRITERIOS DE EDICIÓN}
 
-Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo \parencite[103]{PérezPriego2017}. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnote{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, es el testimonio que el segundo utiliza como texto de base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} simplificado:
+Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo \parencite[103]{PérezPriego2017}. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnote{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, es el testimonio que el segundo utiliza como texto de base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} simplificado a partir de lo anteriormente indicado:
 	\begin{center}
 		\begin{tikzpicture}[every node/.style={font=\normalsize}, sibling distance=10mm]
 		
@@ -166,23 +167,23 @@ Criterios de presentación gráfica\footnote{No aplican al aparato de variantes,
 
 ~\textit{⁊}= se interpreta por \textit{e}.
 
-Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también, en menor medida, cuando se adopten lecciones de \textit{HH1} o algún testimonio impreso.
+Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.
 
 El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
 
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes textuales y los comentarios adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{//}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnote{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones al texto.
 
-\section*{{\fontsize{14}{14.35}\selectfont BIBLIOGRAFÍA}}
+\section*{{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}}
 \addcontentsline{toc}{section}{BIBLIOGRAFÍA}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
 
-\section*{\raggedleft \fontsize{14}{14.35}\selectfont TEXTO Y APARATO CRÍTICOS}
+\section*{\raggedleft \fontsize{13}{14.35}\selectfont TEXTO Y APARATO CRÍTICOS}
 \addcontentsline{toc}{section}{TEXTO Y APARATO CRÍTICOS}
 \newpage
 
-\section*{{\fontsize{14}{14.35}\selectfont CONSPECTUS SIGLORUM}}
+\section*{{\fontsize{13}{14.35}\selectfont CONSPECTUS SIGLORUM}}
 \addcontentsline{toc}{section}{CONSPECTUS SIGLORUM}
 
 \subsection*{{\fontsize{11}{11.96}\selectfont TESTIMONIA}}
@@ -1093,7 +1094,7 @@ me perdona.»
 Así, co\textit{n} tal ente\textit{n}der\\
 todos sentidos humanos
 
-\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{ «oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} —y el de Beltrán, en parte—, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} —como diccionario antiguo—, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral —en el vocablo—; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. Conde sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción del \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}; \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] —aquel, a su vez, siguiendo a Avicena y su «\textit{De anima}»—, son la «\textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}». Luego, cita a dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición Kerkhof]. Siguiendo esas influencias —y otras que citó—, resulta en una unidad \textit{sentidos}-\textit{entendimiento} y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}; al tratarse de una unidad —siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición—, la lección, como se estudia en crítica textual, no puede ir contra el propio autor. Además, González proporciona una compleja justificación al análisis lingüístico.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia \textit{conservados} que, además, pertenece a la tradición \textit{vulgata} y al texto de base de la presente edición [\textit{LB3}]; a esto, el propio Beltrán sugiere escoger mecánicamente la lección del testimonio de base si no se desea «proceder a la composición de un texto crítico híbrido» \parencite[74]{Beltrán2016}. Resulta plausible, quizá en menor medida, la elección de \textit{olvidados}; pero para continuar una línea «conservadora» hacia la vulgata del texto, se selecciona \textit{conservados}.}\\
+\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{ «oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} —y el de Beltrán, en parte—, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} —como diccionario antiguo—, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral —en el vocablo—; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. Conde sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción del \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}; \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] —aquel, a su vez, siguiendo a Avicena y su «\textit{De anima}»—, son la «\textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}». Luego, cita a dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición Kerkhof]. Siguiendo esas influencias —y otras que citó—, resulta en una unidad \textit{sentidos}-\textit{entendimiento} y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}; al tratarse de una unidad —siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición—, la lección, como se estudia en crítica textual, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia \textit{conservados}.}\\
 çercado de su muger\\
 \edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\footnoteC{ 473-480 \textit{sec. m. LB3}.}                                                                        
 
@@ -1110,10 +1111,10 @@ su memoria.
 \endnumbering
 \newpage
 
-\section*{\fontsize{14}{14.35}\selectfont APÉNDICE}
+\section*{\fontsize{13}{14.35}\selectfont APÉNDICE}
 \addcontentsline{toc}{section}{APÉNDICE}
 
-Coplas apócrifas en la \comillas{\textit{Glosa Famossisima}} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
+Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
 
 \begin{pairs}
 	\begin{Leftside}
@@ -1159,3 +1160,8 @@ Coplas apócrifas en la \comillas{\textit{Glosa Famossisima}} de Alonso de Cerva
 	Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnoteA{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
 %Espacio para que el comando que ejecuta el sistema no se quiebre. 
 \end{document}
+
+%%% Local Variables:
+%%% mode: LaTeX
+%%% TeX-master: t
+%%% End:
