--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -3,7 +3,7 @@
 \usepackage{reledpar}
 \usepackage[T1]{fontenc}
 \usepackage{fontspec}
-\usepackage[a4paper]{geometry}
+\usepackage[paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.75cm,outer=1.4cm,bottom=2.54cm]{geometry}
 \usepackage[automark]{scrlayer-scrpage}
 \usepackage{polyglossia}
 \usepackage{tikz}
@@ -18,7 +18,6 @@
 \Xnumberonlyfirstinline
 \Xnumberonlyfrstintwolines
 \Xsymlinenum{$//$}}
-\geometry{paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.75cm,outer=1.4cm,bottom=2.54cm}
 \newcommand{\comillas}[1]{«#1»}
 \clearpairofpagestyles
 \ofoot[\pagemark]{\pagemark}
