--- a/bibliography.bib
+++ b/bibliography.bib
@@ -57,11 +57,10 @@
 }
 
 @book{Covarrubias1611,
-	author    = {S. {de Covarrubias Orozco}},
+	author    = {Sebasti·n de Covarrubias Orozco},
 	shortauthor = {Covarrubias},
-	title     = {Tesoro de la lengua castellana, o espa√±ola},
-	year      = {1611},
-	address   = {Madrid}
+	title     = {Tesoro de la lengua castellana},
+	year      = {1611}
 }
 
 @article{Conde2009,
