--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -63,7 +63,7 @@
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
 
-\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnote{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r.; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.} \vspace{5pt}
+\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnote{ [De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r.; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.} \vspace{5pt}
 
 Las \textit{Coplas por la muerte de su padre} son una «colección» de coplas escritas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} —tres octosílabos y un tetrasílabo—, lenguaje llano y culto, rimas consonantes y posee erudición histórica, filosófica y teológica.
 
@@ -71,7 +71,7 @@ El título de la obra, \textit{Coplas por la muerte de su padre}, resulta un tan
 
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que no existió un \comillas{obras de don Jorge Manrique} o una edición de sus textos, sino que solo se conservaron dispersos en cancioneros.
 
-\section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.], texto que para la presente edición no pudo consultarse.}}
+\section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{ Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.], texto que para la presente edición no pudo consultarse.}}
 \addcontentsline{toc}{section}{TESTIMONIOS}
 
 \textit{LB3}. \textit{Cancionero de Egerton}; British Library, Eg. 939.
@@ -101,7 +101,7 @@ Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fol
 \section*{{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}}
 \addcontentsline{toc}{section}{CRITERIOS DE EDICIÓN}
 
-Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo \parencite[103]{PérezPriego2017}. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnote{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, es el testimonio que el segundo utiliza como texto de base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} simplificado a partir de lo anteriormente indicado:
+Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnote{ Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza como texto de base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnote{ Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
 	\begin{center}
 		\begin{tikzpicture}[every node/.style={font=\normalsize}, sibling distance=10mm]
 		
@@ -346,7 +346,7 @@ Partimos q\textit{ua}ndo nasçemos,\\
 andamos \edtext{q\textit{ua}ndo}{\Afootnote{mientra \textit{δ}; qua\textit{n}to \textit{HH1}}} bivimos
 
 y \edtext{llegamos}{\Afootnote{allegamos \textit{83*IM}}}\\
-al tienpo que feneçemos; \\
+al tienpo que feneçemos;\\
 así que, q\textit{ua}ndo morimos,
 
 descansamos.
