--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -648,7 +648,7 @@ los enriques y reales
 
 del thesoro,\\
 los jaezes, los cavallos\\
-\edtext{de su gente}{\Afootnote{desta gente \textit{82*JM}; de sus gentes \textit{86*RL}; y sus gentes \textit{HH1}; \textit{om. MN19}}} y atavíos
+\edtext{de su gente}{\Afootnote{desta gente \textit{82*JM}; de sus gentes \textit{86*RL}; y sus gentes \textit{HH1}}}\edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{om. MN19}}} y atavíos
 
 ta\textit{n} sobrados\\
 ¿\edtext{dónde}{\lemma{donde}\Afootnote{ado \textit{HH1}}} iremos a buscallos?\\
